Add individual animal weight chart and journal
